--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "es5-shim": "~4.1.0",
     "html5shiv": "~3.7.2",
-    "riot": "~2.0.13",
+    "riot": "2.0.12",
     "gulp-swig": "~0.7.4",
     "gulp-filelist": "~0.1.1",
     "gulp-watch": "~4.2.0",
