--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "gulp-concat": "~2.5.2",
     "gulp-csso": "~1.0.0",
     "gulp-riot": "~0.2.12",
-    "gulp-uglify": "~1.1.0"
-  },
-  "devDependencies": {
-    "es5-shim": "~4.1.0",
-    "html5shiv": "~3.7.2",
-    "riot": "2.0.12",
+    "gulp-uglify": "~1.1.0",
     "gulp-swig": "~0.7.4",
     "gulp-filelist": "~0.1.1",
     "gulp-watch": "~4.2.0",
-    "jsonfile": "~2.0.0",
     "gulp-htmlmin": "~1.1.1",
-    "gulp-wrap": "~0.11.0"
+    "gulp-wrap": "~0.11.0",
+    "jsonfile": "~2.0.0",
+    "es5-shim": "~4.1.0",
+    "html5shiv": "~3.7.2",
+    "riot": "2.0.12",
+    "purecss": "~0.6.0",
+    "font-awesome": "~4.3.0"
   },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
